# stock-tracking

./: .gitignore  pyproject.toml  requirements.txt  scraper.py  webgui.py
